--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.4",
-    "eslint-config-wesbos": "^4.0.1"
+    "eslint-config-wesbos": "^4.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
